# axezent-ai-poly-reduce-kernel

./: CITATION.cff  CLAIM_BOUNDARY.md  CODE_OF_CONDUCT.md  COMMERCIAL.md  CONTRIBUTING.md  Cargo.toml  DONATIONS.md  ENTERPRISE.md  GITHUB_FUNDING.yml  GITHUB_WORKFLOW_MAIN.yml  LICENSE  MANIFEST.json  NOTICE  README.md  RECEIPT_SPEC.md  REDUCTION_SPEC.md  RELEASE.md  SECURITY.md  SHA256SUMS  TESTED_STATUS.md  THREAT_MODEL.md  UPLOAD_CHECKLIST.md  audit_sources.py  axezent_ai_prk_receipt_v1.schema.json  failing_bad_assignment_receipt.json  failing_bad_edge_receipt.json  failing_bad_k_receipt.json  lib.rs  main.rs  passing_3sat_to_clique_receipt.json  prk_checker.py  pyproject.toml  test_checker.py
